# Django_OCR_backend

./: .gitignore  Aptfile  Procfile  README.md  error-10.49pm.txt  error-log-1.19pm.txt  error-log-12.45pm.txt  error-log-2.12pm.txt  error-log-2.16pm.txt  error-log-2.21pm.txt  error-log-2.28pm.txt  error-log-3.30pm.txt  error-log-3.41.txt  error-log-3.49.txt  error-log.2.34.txt  error-log.txt  errors-10.45pm.txt  errors-10.55pm.txt  errors-11.05pm.txt  errors.txt  errors2.txt  fuckingshit.txt  manage.py  package-lock.json  pyproject.toml  requirements.txt
django-ocr-backend/: README.md  error-log-2.36.txt  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py
django-ocr-backend/django-ocr-backend/: settings.py  urls.py  wsgi.py
django-ocr-backend/ocr/: serializers.py  urls.py
django-ocr-backend/ocr/migrations/: 0001_initial.py  0004_auto_20200515_2315.py  0006_auto_20200516_2038.py
ocr/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
ocr/migrations/: 0001_initial.py  0002_post_owner.py  0003_auto_20200503_1401.py  0003_auto_20201210_2333.py  0004_auto_20201210_2355.py  0007_auto_20200520_2033.py  0008_auto_20200927_1039.py  0009_auto_20201121_1520.py
ocr_backend/: manage.py
ocr_backend/ocr/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
ocr_backend/ocr/migrations/: 0002_auto_20200417_1807.py  0005_auto_20200516_1611.py
ocr_backend/ocr_backend/: settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20201203_1241.py  0002_auto_20201212_2250.py  0003_auto_20210103_1716.py
