[tool.poetry]
name = "django_ocr_backend"
version = "0.1.0"
description = "The backend of my OCR project."
authors = ["JosephVC <josephvcardenas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.15"
djangorestframework = "^3.12.2"
django-storages = "^1.11.1"
django-heroku = "^0.3.1"
django-cors-headers = "^3.6.0"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
pytesseract = "^0.3.7"
ocrmypdf = "^11.5.0"
ghostscript = "^0.6"
djangorestframework-simplejwt = "^4.6.0"
drf-social-oauth2 = "^1.0.8"
django-admin-honeypot = "^1.1.0"
python-dotenv = "^0.15.0"
psycopg2 = "^2.8.6"
boto3 = "^1.17.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
